--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -1,72 +1,46 @@
-<<<<<<< HEAD
 @model IEnumerable<Category>
 @{
     ViewData["Title"] = "Index";
 }
-<H1>Category Index</H1> 
-<a class="btn btn-primary" asp-action="Create">Add new Category</a>
-<Table class="table">
-    <thead>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Status</th>
-        <th></th>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.Category_Name</td>
-                <td>@item.Category_Description</td>
-                @if(@item.Category_Status == 1){
-                    <td>Avilable</td>
-                }else{
-                    <td>Unavilable</td>
-                }
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Category_ID">Edit </a>
-                    <a asp-action="Delete" asp-route-id="@item.Category_ID" onclick = "return confirm('Are sure wants to delete?');">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</Table>
-=======
-@{
-    ViewData["Title"] = "Index";
-}
-
-<div id="main">     
-                <div className="page-heading pb-2 mt-4 mb-2 ">
-                    <h3>Manage Category</h3> <a asp-controller="Category" asp-action="addCategory"><button type="button" class="btn btn-outline-primary">Insert</button></a>
-                </div>
-                <div class="page-content">
-                <div class="container mb-3">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                            <th scope="col">CategoryID</th>
-                            <th scope="col">CategoryName</th>
-                            <th scope="col">Decription</th>
-                            <th scope="col">Status</th>
-                            <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                           
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td>
-                                        <a asp-controller="Category" asp-action="updateCategory" class="btn btn-outline-primary rounded-pill"> Update </a>
-                                        <a class="btn btn-outline-primary rounded-pill"> Delete </a>
-                                    </td>
-                                
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+<div id="main">
+    <div className="page-heading pb-2 mt-4 mb-2 ">
+        <h3>Manage Category</h3>
+        <a asp-controller="Category" asp-action="Create"><button type="button" class="btn btn-outline-primary">Insert</button></a>
+    </div>
+    <div class="page-content">
+        <div class="container mb-3">
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th scope="col">CategoryID</th>
+                        <th scope="col">CategoryName</th>
+                        <th scope="col">Decription</th>
+                        <th scope="col">Status</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.Category_ID</td>
+                            <td>@item.Category_Name</td>
+                            <td>@item.Category_Description</td>
+                            @if(@item.Category_Status == 1){
+                                <td>Available</td>
+                            }else{
+                                <td>Unavailable</td>
+                            }
+                            <td>
+                                <a class="btn btn-outline-primary rounded-pill" asp-controller="Category" asp-action="Edit"
+                                asp-route-id="@item.Category_ID">Update</a>
+                                <a class="btn btn-outline-primary rounded-pill" asp-controller="Category" asp-action="Delete"
+                                asp-route-id="@item.Category_ID" onclick = "return confirm('Are sure wants to delete?');">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
->>>>>>> refs/remotes/origin/main
