--- a/Views/Home/Search.cshtml
+++ b/Views/Home/Search.cshtml
@@ -3,7 +3,48 @@
     ViewData["Title"] = "Search";
 }
 
-<div class="text-center">
+<style>
+    h2 {
+        padding-top: 15px;
+        padding-bottom: 30px;
+    }
+</style>
+
+<h2>Result For Search</h2>
+<div class="container">
+    <section class="featured" id="featured">
+        <div class="swiper featured-slider">
+            <div class="swiper-wrapper">
+                <div class="row">
+                    @foreach (var item in Model)
+                    {
+                        <div class="swiper-slide box">
+                            <div class="icons">
+                                <a href="#" class="fas fa-search"></a>
+                                <a href="#" class="fas fa-heart"></a>
+                                <a asp-action="Details" asp-route-id="@item.Book_ID" class="fas fa-eye"></a>
+                            </div>
+                            <div class="image">
+                                <a asp-action="Details" asp-route-id="@item.Book_ID">
+                                    <img src="~/img/@item.Book_Image" alt="@item.Book_Image">
+                                </a>
+                            </div>
+                            <div class="content">
+                                <a asp-action="Details" asp-route-id="@item.Book_ID">
+                                    <h3>@item.Book_Name</h3>
+                                </a>
+                                <div class="price">$@item.Book_SalePrice<span>@item.Book_Price</span></div>
+                                <a class="btn" asp-controller="Cart" asp-action="AddToCart" asp-route-id="@item.Book_ID">Add to cart</a>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+@* <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
@@ -23,4 +64,4 @@
         </div>
     </div>
     }
-</div>
+</div> *@
