Edit Home Search

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
     </section>
     <div class="container">
         <section class="featured" id="featured">
-            <h1 class="heading"> <span>featured books</span> </h1>
+            <h1 class="heading"> <span>Featured books</span> </h1>
             <div class="swiper featured-slider">
                 <div class="swiper-wrapper">
                     <div class="row">
