--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -17,27 +17,30 @@
                 {
                 <hr class="my-4">
 
-                  <div class="row mb-4 d-flex justify-content-between align-items-center">
-                  <div class="col-md-2 col-lg-2 col-xl-2">
+                  <div class="row mb-4 d-flex align-items-center">
+                  <div class="col-md-4 col-lg-4 col-xl-4">
                     <img 
                       src="~/img/LogoFPTBook.jpg"
                       class="img-fluid rounded-3" alt="">
                   </div>
-                  <div class="col-md-3 col-lg-3 col-xl-3">
-                    <h6 class="text-black mb-0" >@c.Book.Book_Name</h6>
-                  </div>
-                  <form asp-controller="Cart" asp-action="Updatecart" method="post" asp-route-idCart="@c.Cart_ID" 
+                  <div class="col-md-2 col-lg-2 col-xl-1" ><h6 class="text-black " style="padding-right: 40px;">@c.Book.Book_Name</h6></div>
+                  
+                  <div class="col-md-2 col-lg-2 col-xl-2">
+                    
+                    <form asp-controller="Cart" asp-action="Updatecart" method="post" asp-route-idCart="@c.Cart_ID" 
                     asp-route-idBook="@c.Book_ID" asp-route-idCartDetail = "@c.CartDetail_ID">
-                    <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
+                    
+                    <div class="col-md-4 col-lg-4 col-xl-8 d-flex"> 
                       <input min="1"  type="number" name="quantity" asp-for="@c.Cart_Quantity"
                       class="form-control form-control-sm" />
-
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Update">
                     </div>
                   </form>
+                  </div>
+                 
                   
                   <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                    <h6 class="mb-0">@c.Book.Book_SalePrice<span>&#8363;</span></h6>
+                    <h6 class="mb-0">@c.Book.Book_SalePrice<span>$</span></h6>
                   </div>
                   
                   <div class="col-md-1 col-lg-1 col-xl-1 text-end">
@@ -61,18 +64,18 @@
 
                   <div class="d-flex justify-content-between mb-5">
                     <h5 class="text-uppercase">Total price</h5>
-                    <h5>@ViewBag.data<span>&#8363;</span></h5>
+                    <h5>@ViewBag.data<span>$</span></h5>
                   </div>
 
                     @if (@Model.Count() == 0){
-                      <a onclick="myFunction()" class="btn text-light " 
-                      style= "background-color: rgba(13,92,182,255);" type="submit" value="Payment">Order</a>
+                      <a onclick="myFunction()" class="btn text-hover " 
+                      style= "background-color: #25aab3" type="submit" value="Payment">Order</a>
                     }
                     else
                     {
-                      <a class="btn text-light" asp-controller="Cart" asp-action="OrderCart" 
+                      <a class="btn text-hover " asp-controller="Cart" asp-action="OrderCart" 
                       asp-route-idCart="@Model.ElementAt(0).Cart_ID" onclick = "return confirm('Are sure wants to order?');" 
-                      style= "background-color: rgba(13,92,182,255);">Order</a>
+                      style= "background-color: #25aab3">Order</a>
                     }
                                   
                   <script type="text/javascript">
